Removed newlines from readme

--- a/README
+++ b/README
@@ -1,11 +1,5 @@
 SkateBud, a personal skateboarding assistant, built with Kinoma JS.
 
-Skatebud allows users to compete in games with skaters of their same skill level, 
-locate and check-in at local skate parts and learn new tricks through our trick manual 
-and light up sensors.  Skatebud’s sensors help skaters learn while also tracking their 
-tricks in order to award them points in their games against other skaters.  
-
-Skatebud allows skaters the opportunity to outreach to nearby and far away skaters of all 
-levels!
+Skatebud allows users to compete in games with skaters of their same skill level, locate and check-in at local skate parts and learn new tricks through our trick manual and light up sensors.  Skatebud’s sensors help skaters learn while also tracking their tricks in order to award them points in their games against other skaters. Skatebud gives users the opportunity to outreach to nearby and far away skaters of all levels!
 
 By Michael Cheng, Rahul Joshi, Angelica Inguanzo, Samuel Son, and Yujia Ma
