--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 SkateBud, a personal skateboarding assistant, built with Kinoma JS.
 
-Skatebud allows users to compete in games with skaters of their same skill level, locate and check-in at local skate parts and learn new tricks through our trick manual and light up sensors.  Skatebud’s sensors help skaters learn while also tracking their tricks in order to award them points in their games against other skaters. Skatebud gives users the opportunity to outreach to nearby and far away skaters of all levels!
+Our app allows users to compete in games with skaters of their same skill level, locate and check-in at local skate parts and learn new tricks through our trick manual and light up sensors. Sensors on the board interface with SkateBud to help skaters learn, while also tracking their tricks in order to award them points in their games against other skaters.
+
+With Skatebud, skaters have the opportunity to engage with skaters far and wide, of all skill levels!
 
 By Michael Cheng, Rahul Joshi, Angelica Inguanzo, Samuel Son, and Yujia Ma
